<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_player_in_out">Thursday Attendance</string>
    <string name="app_player_connected">Connected to the internet</string>
    <string name="app_name">ChessNuggets</string>
    <string name="app_help_faq">FAQ HELP</string>
    <string name="app_search_player">SEARCH PLAYER</string>
    <string name="app_search_player_hint">player name or raking</string>
    <string name="app_help_text">
        WhatsApp Messenger is een cross-platform mobiele 
        berichtenapp waarmee je berichten kunt uitwisselen 
        zonder dat je hoeft te betalen voor sms-berichten. 
        WhatsApp Messenger is beschikbaar voor iPhone, BlackBerry,
         Windows Phone, Android en Nokia en ja hoor, 
         deze telefoons kunnen allemaal berichten naar elkaar sturen!
          Aangezien WhatsApp Messenger gebruikmaakt van hetzelfde internetabonnement
           dat je gebruikt voor e-mailen en surfen op internet, hoef je niets 
           te betalen voor de berichten die je stuurt om in contact te blijven met je vrienden.P</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_info">Login</string>
    <string name="action_user_hint_Id">Enter Your Id</string>
    <string name="action_user_hint_Secret">Enter Secret Key</string>
    <string name="btn_help_name">FAQ/HELP</string>
    <string name="btn_sync_name">SYNC DATA</string>
    <string name="btn_tournament_name">TOURNAMENT</string>
    <string name="btn_searchPlayer_name">SEARCH PLAYER</string>
    <string name="btn_profile_name">PROFILE</string>
    <string name="player_name">Kinson Michel</string>
    <string name="player_rating">2378</string>
    <string name="player_winning_chance">85%</string>
    <string name="player_winning_record">W: 15 D: 7 L: 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
